@@ -3,6 +3,9 @@ package art.arcane.iris.core;
 import art.arcane.iris.Iris;
 import art.arcane.iris.core.loader.IrisData;
 import art.arcane.iris.core.nms.INMS;
+import art.arcane.iris.core.nms.container.StructurePlacement;
+import art.arcane.iris.core.link.Identifier;
+import art.arcane.iris.engine.data.cache.AtomicCache;
 import art.arcane.iris.engine.object.IrisObject;
 import art.arcane.iris.engine.object.IrisDimension;
 import art.arcane.iris.engine.object.IrisExternalDatapackReplaceTargets;
@@ -52,6 +55,7 @@ import java.util.ArrayDeque;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Comparator;
+import java.util.EnumMap;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedHashMap;
@@ -85,12 +89,15 @@ public final class ExternalDataPackPipeline {
     private static final String MANAGED_WORLD_PACK_PREFIX = "iris-external-";
     private static final String MANAGED_PACK_META_DESCRIPTION = "Iris managed external structure datapack assets.";
     private static final String IMPORT_PREFIX = "imports";
+    private static final String LOCATE_MANIFEST_PATH = "cache/external-datapack-locate-manifest.json";
     private static final int CONNECT_TIMEOUT_MS = 4000;
     private static final int READ_TIMEOUT_MS = 8000;
     private static final int IMPORT_PARALLELISM = Math.max(1, Math.min(8, Runtime.getRuntime().availableProcessors()));
     private static final int MAX_IN_FLIGHT = Math.max(2, IMPORT_PARALLELISM * 3);
     private static final Map<String, BlockData> BLOCK_DATA_CACHE = new ConcurrentHashMap<>();
     private static final Map<String, String> PACK_ENVIRONMENT_CACHE = new ConcurrentHashMap<>();
+    private static final Map<String, Set<String>> RESOLVED_LOCATE_STRUCTURES_BY_ID = new ConcurrentHashMap<>();
+    private static final AtomicCache<KMap<Identifier, StructurePlacement>> VANILLA_STRUCTURE_PLACEMENTS = new AtomicCache<>();
     private static final BlockData AIR = B.getAir();
 
     private ExternalDataPackPipeline() {
@@ -104,9 +111,79 @@ public final class ExternalDataPackPipeline {
         return normalizeEnvironment(value);
     }
 
+    public static Set<String> resolveLocateStructuresForId(String id) {
+        String normalizedId = normalizeLocateId(id);
+        if (normalizedId.isBlank()) {
+            return Set.of();
+        }
+
+        Set<String> resolved = RESOLVED_LOCATE_STRUCTURES_BY_ID.get(normalizedId);
+        if (resolved != null && !resolved.isEmpty()) {
+            return Set.copyOf(resolved);
+        }
+
+        Map<String, Set<String>> fromManifest = readLocateManifest();
+        Set<String> manifestSet = fromManifest.get(normalizedId);
+        if (manifestSet == null || manifestSet.isEmpty()) {
+            return Set.of();
+        }
+
+        RESOLVED_LOCATE_STRUCTURES_BY_ID.put(normalizedId, Set.copyOf(manifestSet));
+        return Set.copyOf(manifestSet);
+    }
+
+    public static Map<String, Set<String>> snapshotLocateStructuresById() {
+        if (RESOLVED_LOCATE_STRUCTURES_BY_ID.isEmpty()) {
+            Map<String, Set<String>> manifest = readLocateManifest();
+            if (!manifest.isEmpty()) {
+                RESOLVED_LOCATE_STRUCTURES_BY_ID.putAll(manifest);
+            }
+        }
+
+        ArrayList<String> ids = new ArrayList<>(RESOLVED_LOCATE_STRUCTURES_BY_ID.keySet());
+        ids.sort(String::compareTo);
+        LinkedHashMap<String, Set<String>> snapshot = new LinkedHashMap<>();
+        for (String id : ids) {
+            if (id == null || id.isBlank()) {
+                continue;
+            }
+
+            Set<String> structures = RESOLVED_LOCATE_STRUCTURES_BY_ID.get(id);
+            if (structures == null || structures.isEmpty()) {
+                continue;
+            }
+
+            ArrayList<String> sortedStructures = new ArrayList<>(structures);
+            sortedStructures.sort(String::compareTo);
+            snapshot.put(id, Set.copyOf(sortedStructures));
+        }
+
+        return Map.copyOf(snapshot);
+    }
+
+    public static Set<String> snapshotLocateStructureKeys() {
+        Map<String, Set<String>> locateById = snapshotLocateStructuresById();
+        LinkedHashSet<String> structures = new LinkedHashSet<>();
+        for (Set<String> values : locateById.values()) {
+            if (values == null || values.isEmpty()) {
+                continue;
+            }
+
+            for (String value : values) {
+                String normalized = normalizeLocateStructure(value);
+                if (!normalized.isBlank()) {
+                    structures.add(normalized);
+                }
+            }
+        }
+
+        return Set.copyOf(structures);
+    }
+
     public static PipelineSummary processDatapacks(List<DatapackRequest> requests, Map<String, KList<File>> worldDatapackFoldersByPack) {
         PipelineSummary summary = new PipelineSummary();
         PACK_ENVIRONMENT_CACHE.clear();
+        RESOLVED_LOCATE_STRUCTURES_BY_ID.clear();
 
         Set<File> knownWorldDatapackFolders = new LinkedHashSet<>();
         if (worldDatapackFoldersByPack != null) {
@@ -129,12 +206,16 @@ public final class ExternalDataPackPipeline {
         List<DatapackRequest> normalizedRequests = normalizeRequests(requests);
         summary.requests = normalizedRequests.size();
         if (normalizedRequests.isEmpty()) {
+            Iris.info("Downloading datapacks [0/0] Downloading/Done!");
+            writeLocateManifest(Map.of());
             summary.legacyWorldCopyRemovals += pruneManagedWorldDatapacks(knownWorldDatapackFolders, Set.of());
             return summary;
         }
 
         List<RequestedSourceInput> sourceInputs = new ArrayList<>();
-        for (DatapackRequest request : normalizedRequests) {
+        LinkedHashMap<String, Set<String>> resolvedLocateStructuresById = new LinkedHashMap<>();
+        for (int requestIndex = 0; requestIndex < normalizedRequests.size(); requestIndex++) {
+            DatapackRequest request = normalizedRequests.get(requestIndex);
             if (request == null) {
                 continue;
             }
@@ -145,7 +226,8 @@ public final class ExternalDataPackPipeline {
                 } else {
                     summary.optionalFailures++;
                 }
-                Iris.warn("Skipped external datapack request " + request.id() + " because replaceVanilla requires explicit replacement targets.");
+                Iris.warn("Downloading datapacks [" + (requestIndex + 1) + "/" + normalizedRequests.size() + "] Failed! id=" + request.id() + " (replaceVanilla requires explicit replacement targets).");
+                mergeResolvedLocateStructures(resolvedLocateStructuresById, request.id(), request.resolvedLocateStructures());
                 continue;
             }
 
@@ -156,7 +238,8 @@ public final class ExternalDataPackPipeline {
                 } else {
                     summary.optionalFailures++;
                 }
-                Iris.warn("Failed external datapack request " + request.id() + ": " + syncResult.error());
+                Iris.warn("Downloading datapacks [" + (requestIndex + 1) + "/" + normalizedRequests.size() + "] Failed! id=" + request.id() + " (" + syncResult.error() + ").");
+                mergeResolvedLocateStructures(resolvedLocateStructuresById, request.id(), request.resolvedLocateStructures());
                 continue;
             }
 
@@ -165,6 +248,8 @@ public final class ExternalDataPackPipeline {
             } else if (syncResult.restored()) {
                 summary.restoredRequests++;
             }
+            Iris.info("Downloading datapacks [" + (requestIndex + 1) + "/" + normalizedRequests.size() + "] Downloading/Done!");
+            mergeResolvedLocateStructures(resolvedLocateStructuresById, request.id(), request.resolvedLocateStructures());
             sourceInputs.add(new RequestedSourceInput(syncResult.source(), request));
         }
 
@@ -172,6 +257,8 @@ public final class ExternalDataPackPipeline {
             if (summary.requiredFailures == 0) {
                 summary.legacyWorldCopyRemovals += pruneManagedWorldDatapacks(knownWorldDatapackFolders, Set.of());
             }
+            writeLocateManifest(resolvedLocateStructuresById);
+            RESOLVED_LOCATE_STRUCTURES_BY_ID.putAll(resolvedLocateStructuresById);
             return summary;
         }
 
@@ -186,7 +273,8 @@ public final class ExternalDataPackPipeline {
         Set<String> activeManagedWorldDatapackNames = new HashSet<>();
         ImportSummary importSummary = new ImportSummary();
 
-        for (RequestedSourceInput sourceInput : sourceInputs) {
+        for (int sourceIndex = 0; sourceIndex < sourceInputs.size(); sourceIndex++) {
+            RequestedSourceInput sourceInput = sourceInputs.get(sourceIndex);
             File entry = sourceInput.source();
             DatapackRequest request = sourceInput.request();
             if (entry == null || !entry.exists() || request == null) {
@@ -235,12 +323,14 @@ public final class ExternalDataPackPipeline {
                 JSONObject sourceResult = convertSource(entry, sourceDescriptor, sourceRoot);
                 newSources.put(sourceResult);
                 addSourceToSummary(importSummary, sourceResult, false);
-                if (sourceResult.optInt("failed", 0) > 0) {
-                    if (request.required()) {
-                        summary.requiredFailures++;
-                    } else {
-                        summary.optionalFailures++;
-                    }
+                int conversionFailed = sourceResult.optInt("failed", 0);
+                if (conversionFailed > 0) {
+                    int conversionScanned = sourceResult.optInt("nbtScanned", 0);
+                    int conversionSuccess = sourceResult.optInt("converted", 0);
+                    Iris.warn("External datapack object import had " + conversionFailed
+                            + " failed structure conversion(s) for id=" + request.id()
+                            + " source=" + sourceDescriptor.sourceName()
+                            + " (scanned=" + conversionScanned + ", converted=" + conversionSuccess + ").");
                 }
             }
 
@@ -248,8 +338,29 @@ public final class ExternalDataPackPipeline {
             ProjectionResult projectionResult = projectSourceToWorldDatapacks(entry, sourceDescriptor, request, targetWorldFolders);
             summary.worldDatapacksInstalled += projectionResult.installedDatapacks();
             summary.worldAssetsInstalled += projectionResult.installedAssets();
+            mergeResolvedLocateStructures(resolvedLocateStructuresById, request.id(), projectionResult.resolvedLocateStructures());
             if (projectionResult.managedName() != null && !projectionResult.managedName().isBlank() && projectionResult.installedDatapacks() > 0) {
                 activeManagedWorldDatapackNames.add(projectionResult.managedName());
+            }
+            if (projectionResult.success()) {
+                Iris.verbose("External datapack projection: id=" + request.id()
+                        + ", source=" + sourceDescriptor.sourceName()
+                        + ", targetPack=" + request.targetPack()
+                        + ", managedDatapack=" + projectionResult.managedName()
+                        + ", installedDatapacks=" + projectionResult.installedDatapacks()
+                        + ", installedAssets=" + projectionResult.installedAssets()
+                        + ", syntheticStructureSets=" + projectionResult.syntheticStructureSets()
+                        + ", success=true");
+            } else {
+                Iris.warn("External datapack projection: id=" + request.id()
+                        + ", source=" + sourceDescriptor.sourceName()
+                        + ", targetPack=" + request.targetPack()
+                        + ", managedDatapack=" + projectionResult.managedName()
+                        + ", installedDatapacks=" + projectionResult.installedDatapacks()
+                        + ", installedAssets=" + projectionResult.installedAssets()
+                        + ", syntheticStructureSets=" + projectionResult.syntheticStructureSets()
+                        + ", success=false"
+                        + ", reason=" + projectionResult.error());
             }
             if (!projectionResult.success()) {
                 if (request.required()) {
@@ -267,7 +378,164 @@ public final class ExternalDataPackPipeline {
             summary.legacyWorldCopyRemovals += pruneManagedWorldDatapacks(knownWorldDatapackFolders, activeManagedWorldDatapackNames);
         }
 
+        writeLocateManifest(resolvedLocateStructuresById);
+        RESOLVED_LOCATE_STRUCTURES_BY_ID.putAll(resolvedLocateStructuresById);
         return summary;
+    }
+
+    private static File getLocateManifestFile() {
+        return Iris.instance.getDataFile(LOCATE_MANIFEST_PATH);
+    }
+
+    private static String normalizeLocateId(String id) {
+        if (id == null) {
+            return "";
+        }
+
+        String normalized = id.trim().toLowerCase(Locale.ROOT);
+        if (normalized.isBlank()) {
+            return "";
+        }
+
+        normalized = normalized.replace("minecraft:worldgen/structure/", "");
+        normalized = normalized.replace("worldgen/structure/", "");
+        return normalized;
+    }
+
+    private static String normalizeLocateStructure(String structure) {
+        if (structure == null || structure.isBlank()) {
+            return "";
+        }
+        String normalized = normalizeResourceKey("minecraft", structure, "worldgen/structure/");
+        if (normalized == null || normalized.isBlank()) {
+            return "";
+        }
+        return normalized;
+    }
+
+    private static void mergeResolvedLocateStructures(Map<String, Set<String>> destination, String id, Set<String> resolvedStructures) {
+        if (destination == null) {
+            return;
+        }
+
+        String normalizedId = normalizeLocateId(id);
+        if (normalizedId.isBlank() || resolvedStructures == null || resolvedStructures.isEmpty()) {
+            return;
+        }
+
+        Set<String> merged = destination.computeIfAbsent(normalizedId, key -> new LinkedHashSet<>());
+        for (String structure : resolvedStructures) {
+            String normalizedStructure = normalizeLocateStructure(structure);
+            if (!normalizedStructure.isBlank()) {
+                merged.add(normalizedStructure);
+            }
+        }
+    }
+
+    private static void writeLocateManifest(Map<String, Set<String>> resolvedLocateStructuresById) {
+        File output = getLocateManifestFile();
+        LinkedHashMap<String, Set<String>> normalized = new LinkedHashMap<>();
+        if (resolvedLocateStructuresById != null) {
+            for (Map.Entry<String, Set<String>> entry : resolvedLocateStructuresById.entrySet()) {
+                String normalizedId = normalizeLocateId(entry.getKey());
+                if (normalizedId.isBlank()) {
+                    continue;
+                }
+
+                LinkedHashSet<String> structures = new LinkedHashSet<>();
+                Set<String> values = entry.getValue();
+                if (values != null) {
+                    for (String structure : values) {
+                        String normalizedStructure = normalizeLocateStructure(structure);
+                        if (!normalizedStructure.isBlank()) {
+                            structures.add(normalizedStructure);
+                        }
+                    }
+                }
+
+                if (!structures.isEmpty()) {
+                    normalized.put(normalizedId, Set.copyOf(structures));
+                }
+            }
+        }
+
+        JSONObject root = new JSONObject();
+        root.put("generatedAt", Instant.now().toString());
+        JSONObject mappings = new JSONObject();
+        ArrayList<String> ids = new ArrayList<>(normalized.keySet());
+        ids.sort(String::compareTo);
+        for (String id : ids) {
+            Set<String> structures = normalized.get(id);
+            if (structures == null || structures.isEmpty()) {
+                continue;
+            }
+
+            ArrayList<String> sortedStructures = new ArrayList<>(structures);
+            sortedStructures.sort(String::compareTo);
+            JSONArray values = new JSONArray();
+            for (String structure : sortedStructures) {
+                values.put(structure);
+            }
+            mappings.put(id, values);
+        }
+        root.put("ids", mappings);
+
+        try {
+            writeBytesToFile(root.toString(4).getBytes(StandardCharsets.UTF_8), output);
+        } catch (Throwable e) {
+            Iris.warn("Failed to write external datapack locate manifest " + output.getPath());
+            Iris.reportError(e);
+        }
+    }
+
+    private static Map<String, Set<String>> readLocateManifest() {
+        LinkedHashMap<String, Set<String>> mapped = new LinkedHashMap<>();
+        File input = getLocateManifestFile();
+        if (!input.exists() || !input.isFile()) {
+            return mapped;
+        }
+
+        try {
+            JSONObject root = new JSONObject(Files.readString(input.toPath(), StandardCharsets.UTF_8));
+            JSONObject ids = root.optJSONObject("ids");
+            if (ids == null) {
+                return mapped;
+            }
+
+            ArrayList<String> keys = new ArrayList<>(ids.keySet());
+            keys.sort(String::compareTo);
+            for (String key : keys) {
+                String normalizedId = normalizeLocateId(key);
+                if (normalizedId.isBlank()) {
+                    continue;
+                }
+
+                LinkedHashSet<String> structures = new LinkedHashSet<>();
+                JSONArray values = ids.optJSONArray(key);
+                if (values != null) {
+                    for (int i = 0; i < values.length(); i++) {
+                        Object rawValue = values.opt(i);
+                        if (rawValue == null) {
+                            continue;
+                        }
+
+                        String normalizedStructure = normalizeLocateStructure(String.valueOf(rawValue));
+                        if (!normalizedStructure.isBlank()) {
+                            structures.add(normalizedStructure);
+                        }
+                    }
+                }
+
+                if (!structures.isEmpty()) {
+                    mapped.put(normalizedId, Set.copyOf(structures));
+                }
+            }
+        } catch (Throwable e) {
+            Iris.warn("Failed to read external datapack locate manifest " + input.getPath());
+            Iris.reportError(e);
+        }
+
+        return mapped;
     }
 
     private static List<DatapackRequest> normalizeRequests(List<DatapackRequest> requests) {
@@ -515,12 +783,25 @@ public final class ExternalDataPackPipeline {
 
     private static ProjectionResult projectSourceToWorldDatapacks(File source, SourceDescriptor sourceDescriptor, DatapackRequest request, KList<File> worldDatapackFolders) {
         if (source == null || sourceDescriptor == null || request == null) {
-            return ProjectionResult.failure("");
+            return ProjectionResult.failure("", "invalid projection inputs");
         }
 
         String managedName = buildManagedWorldDatapackName(sourceDescriptor.targetPack(), sourceDescriptor.sourceKey());
         if (worldDatapackFolders == null || worldDatapackFolders.isEmpty()) {
-            return ProjectionResult.success(managedName, 0, 0);
+            return ProjectionResult.success(managedName, 0, 0, Set.copyOf(request.resolvedLocateStructures()), 0);
+        }
+
+        ProjectionAssetSummary projectionAssetSummary;
+        try {
+            projectionAssetSummary = buildProjectedAssets(source, sourceDescriptor, request);
+        } catch (Throwable e) {
+            Iris.warn("Failed to prepare projected external datapack assets from " + sourceDescriptor.sourceName());
+            Iris.reportError(e);
+            return ProjectionResult.failure(managedName, e.getMessage());
+        }
+
+        if (projectionAssetSummary.assets().isEmpty()) {
+            return ProjectionResult.success(managedName, 0, 0, projectionAssetSummary.resolvedLocateStructures(), projectionAssetSummary.syntheticStructureSets());
         }
 
         int installedDatapacks = 0;
@@ -534,7 +815,7 @@ public final class ExternalDataPackPipeline {
                 worldDatapackFolder.mkdirs();
                 File managedFolder = new File(worldDatapackFolder, managedName);
                 deleteFolder(managedFolder);
-                int copiedAssets = copyProjectedEntries(source, managedFolder, request);
+                int copiedAssets = writeProjectedAssets(managedFolder, projectionAssetSummary.assets());
                 if (copiedAssets <= 0) {
                     deleteFolder(managedFolder);
                     continue;
@@ -545,25 +826,150 @@ public final class ExternalDataPackPipeline {
             } catch (Throwable e) {
                 Iris.warn("Failed to project external datapack source " + sourceDescriptor.sourceName() + " into " + worldDatapackFolder.getPath());
                 Iris.reportError(e);
-                return ProjectionResult.failure(managedName);
+                return ProjectionResult.failure(managedName, e.getMessage());
             }
         }
 
-        return ProjectionResult.success(managedName, installedDatapacks, installedAssets);
+        return ProjectionResult.success(managedName, installedDatapacks, installedAssets, projectionAssetSummary.resolvedLocateStructures(), projectionAssetSummary.syntheticStructureSets());
     }
 
-    private static int copyProjectedEntries(File source, File managedFolder, DatapackRequest request) throws IOException {
+    private static ProjectionAssetSummary buildProjectedAssets(File source, SourceDescriptor sourceDescriptor, DatapackRequest request) throws IOException {
+        ProjectionSelection projectionSelection = readProjectedEntries(source, request);
+        if (request.required() && !projectionSelection.missingSeededTargets().isEmpty()) {
+            throw new IOException("Required replaceVanilla projection missing seeded target(s): " + summarizeMissingSeededTargets(projectionSelection.missingSeededTargets()));
+        }
+
+        List<ProjectionInputAsset> inputAssets = projectionSelection.assets();
+        if (inputAssets.isEmpty()) {
+            return new ProjectionAssetSummary(List.of(), Set.copyOf(request.resolvedLocateStructures()), 0);
+        }
+
+        String scopeNamespace = buildScopeNamespace(sourceDescriptor, request);
+        LinkedHashMap<String, String> remappedKeys = new LinkedHashMap<>();
+        for (ProjectionInputAsset inputAsset : inputAssets) {
+            if (inputAsset.entry().namespace().equals("minecraft") && request.alongsideMode()) {
+                String remappedKey = scopeNamespace + ":" + extractPathFromKey(inputAsset.entry().key());
+                remappedKeys.put(inputAsset.entry().key(), remappedKey);
+            }
+        }
+
+        LinkedHashMap<String, String> remapStringValues = new LinkedHashMap<>();
+        for (Map.Entry<String, String> entry : remappedKeys.entrySet()) {
+            remapStringValues.put(entry.getKey(), entry.getValue());
+            remapStringValues.put("#" + entry.getKey(), "#" + entry.getValue());
+        }
+
+        LinkedHashMap<String, KList<String>> scopedTagValues = new LinkedHashMap<>();
+        LinkedHashSet<String> resolvedLocateStructures = new LinkedHashSet<>();
+        resolvedLocateStructures.addAll(request.resolvedLocateStructures());
+        LinkedHashSet<String> remappedStructureKeys = new LinkedHashSet<>();
+        LinkedHashSet<String> structureSetReferences = new LinkedHashSet<>();
+        LinkedHashSet<String> writtenPaths = new LinkedHashSet<>();
+        ArrayList<ProjectionOutputAsset> outputAssets = new ArrayList<>();
+
+        for (ProjectionInputAsset inputAsset : inputAssets) {
+            ProjectedEntry projectedEntry = inputAsset.entry();
+            String remappedKey = remappedKeys.get(projectedEntry.key());
+            ProjectedEntry effectiveEntry = remappedKey == null
+                    ? projectedEntry
+                    : new ProjectedEntry(projectedEntry.type(), extractNamespaceFromKey(remappedKey), remappedKey);
+
+            String outputRelativePath = buildProjectedPath(effectiveEntry);
+            if (outputRelativePath == null || writtenPaths.contains(outputRelativePath)) {
+                continue;
+            }
+            writtenPaths.add(outputRelativePath);
+
+            byte[] outputBytes = inputAsset.bytes();
+            if (projectedEntry.type() == ProjectedEntryType.STRUCTURE
+                    || projectedEntry.type() == ProjectedEntryType.STRUCTURE_SET
+                    || projectedEntry.type() == ProjectedEntryType.CONFIGURED_FEATURE
+                    || projectedEntry.type() == ProjectedEntryType.PLACED_FEATURE
+                    || projectedEntry.type() == ProjectedEntryType.TEMPLATE_POOL
+                    || projectedEntry.type() == ProjectedEntryType.PROCESSOR_LIST
+                    || projectedEntry.type() == ProjectedEntryType.BIOME_HAS_STRUCTURE_TAG) {
+                JSONObject root = new JSONObject(new String(outputBytes, StandardCharsets.UTF_8));
+                rewriteJsonValues(root, remapStringValues);
+
+                if (projectedEntry.type() == ProjectedEntryType.STRUCTURE) {
+                    Integer startHeightAbsolute = getPatchedStartHeightAbsolute(projectedEntry, request);
+                    if (startHeightAbsolute == null && remappedKey != null) {
+                        startHeightAbsolute = request.structureStartHeights().get(remappedKey);
+                    }
+
+                    if (startHeightAbsolute != null) {
+                        JSONObject startHeight = new JSONObject();
+                        startHeight.put("absolute", startHeightAbsolute);
+                        root.put("start_height", startHeight);
+                    }
+
+                    if (!request.forcedBiomeKeys().isEmpty()) {
+                        String scopeTagKey = scopeNamespace + ":has_structure/" + extractPathFromKey(effectiveEntry.key());
+                        root.put("biomes", "#" + scopeTagKey);
+                        KList<String> values = scopedTagValues.computeIfAbsent(scopeTagKey, key -> new KList<>());
+                        values.addAll(request.forcedBiomeKeys());
+                    }
+
+                    remappedStructureKeys.add(effectiveEntry.key());
+                    resolvedLocateStructures.add(effectiveEntry.key());
+                } else if (projectedEntry.type() == ProjectedEntryType.STRUCTURE_SET) {
+                    structureSetReferences.addAll(readStructureSetReferences(root));
+                }
+
+                outputBytes = root.toString(4).getBytes(StandardCharsets.UTF_8);
+            }
+
+            outputAssets.add(new ProjectionOutputAsset(outputRelativePath, outputBytes));
+        }
+
+        int syntheticStructureSets = 0;
+        if (request.alongsideMode()) {
+            SyntheticStructureSetResult syntheticResult = synthesizeMissingStructureSets(
+                    remappedStructureKeys,
+                    structureSetReferences,
+                    remappedKeys,
+                    scopeNamespace,
+                    writtenPaths
+            );
+            outputAssets.addAll(syntheticResult.assets());
+            syntheticStructureSets += syntheticResult.count();
+        }
+
+        for (Map.Entry<String, KList<String>> scopedEntry : scopedTagValues.entrySet()) {
+            String tagKey = scopedEntry.getKey();
+            String tagPath = "data/" + extractNamespaceFromKey(tagKey) + "/tags/worldgen/biome/" + extractPathFromKey(tagKey) + ".json";
+            if (writtenPaths.contains(tagPath)) {
+                continue;
+            }
+            writtenPaths.add(tagPath);
+
+            KList<String> uniqueValues = scopedEntry.getValue().removeDuplicates().sort();
+            JSONArray values = new JSONArray();
+            for (String value : uniqueValues) {
+                values.put(value);
+            }
+
+            JSONObject root = new JSONObject();
+            root.put("replace", false);
+            root.put("values", values);
+            outputAssets.add(new ProjectionOutputAsset(tagPath, root.toString(4).getBytes(StandardCharsets.UTF_8)));
+        }
+
+        return new ProjectionAssetSummary(outputAssets, Set.copyOf(resolvedLocateStructures), syntheticStructureSets);
+    }
+
+    private static ProjectionSelection readProjectedEntries(File source, DatapackRequest request) throws IOException {
         if (source.isDirectory()) {
-            return copyProjectedDirectoryEntries(source, managedFolder, request);
+            return selectProjectedEntries(readProjectedDirectoryEntries(source), request);
         }
         if (isArchive(source.getName())) {
-            return copyProjectedArchiveEntries(source, managedFolder, request);
+            return selectProjectedEntries(readProjectedArchiveEntries(source), request);
         }
-        return 0;
+        return ProjectionSelection.empty();
     }
 
-    private static int copyProjectedDirectoryEntries(File source, File managedFolder, DatapackRequest request) throws IOException {
-        int copied = 0;
+    private static List<ProjectionInputAsset> readProjectedDirectoryEntries(File source) throws IOException {
+        ArrayList<ProjectionInputAsset> assets = new ArrayList<>();
         ArrayDeque<File> queue = new ArrayDeque<>();
         queue.add(source);
         while (!queue.isEmpty()) {
@@ -590,24 +996,19 @@ public final class ExternalDataPackPipeline {
                 }
 
                 ProjectedEntry projectedEntry = parseProjectedEntry(normalizedRelative);
-                if (!shouldProjectEntry(projectedEntry, request)) {
+                if (projectedEntry == null) {
                     continue;
                 }
 
-                File output = new File(managedFolder, normalizedRelative);
-                File parent = output.getParentFile();
-                if (parent != null) {
-                    parent.mkdirs();
-                }
-                copyProjectedFileEntry(child, output, request, projectedEntry);
-                copied++;
+                byte[] bytes = Files.readAllBytes(child.toPath());
+                assets.add(new ProjectionInputAsset(normalizedRelative, projectedEntry, bytes));
             }
         }
-        return copied;
+        return assets;
     }
 
-    private static int copyProjectedArchiveEntries(File source, File managedFolder, DatapackRequest request) throws IOException {
-        int copied = 0;
+    private static List<ProjectionInputAsset> readProjectedArchiveEntries(File source) throws IOException {
+        ArrayList<ProjectionInputAsset> assets = new ArrayList<>();
         try (ZipFile zipFile = new ZipFile(source)) {
             List<? extends ZipEntry> entries = zipFile.stream()
                     .filter(entry -> !entry.isDirectory())
@@ -621,47 +1022,279 @@ public final class ExternalDataPackPipeline {
                 }
 
                 ProjectedEntry projectedEntry = parseProjectedEntry(normalizedRelative);
-                if (!shouldProjectEntry(projectedEntry, request)) {
+                if (projectedEntry == null) {
                     continue;
                 }
 
-                File output = new File(managedFolder, normalizedRelative);
-                File parent = output.getParentFile();
-                if (parent != null) {
-                    parent.mkdirs();
-                }
                 try (InputStream inputStream = zipFile.getInputStream(zipEntry)) {
-                    copyProjectedStreamEntry(inputStream, output, request, projectedEntry);
+                    byte[] bytes = inputStream.readAllBytes();
+                    assets.add(new ProjectionInputAsset(normalizedRelative, projectedEntry, bytes));
                 }
-                copied++;
             }
+        }
+        return assets;
+    }
+
+    private static ProjectionSelection selectProjectedEntries(List<ProjectionInputAsset> inputAssets, DatapackRequest request) {
+        if (inputAssets == null || inputAssets.isEmpty() || request == null) {
+            return ProjectionSelection.empty();
+        }
+
+        if (!request.alongsideMode() && request.replaceVanilla()) {
+            return selectReplaceVanillaEntries(inputAssets, request);
+        }
+
+        ArrayList<ProjectionInputAsset> selected = new ArrayList<>();
+        for (ProjectionInputAsset asset : inputAssets) {
+            if (asset == null) {
+                continue;
+            }
+
+            if (shouldProjectEntry(asset.entry(), request)) {
+                selected.add(asset);
+            }
+        }
+
+        return new ProjectionSelection(selected, Set.of());
+    }
+
+    private static ProjectionSelection selectReplaceVanillaEntries(List<ProjectionInputAsset> inputAssets, DatapackRequest request) {
+        EnumMap<ProjectedEntryType, LinkedHashMap<String, ProjectionInputAsset>> minecraftAssets = new EnumMap<>(ProjectedEntryType.class);
+        EnumMap<ProjectedEntryType, LinkedHashSet<String>> closure = new EnumMap<>(ProjectedEntryType.class);
+        for (ProjectedEntryType type : ProjectedEntryType.values()) {
+            minecraftAssets.put(type, new LinkedHashMap<>());
+            closure.put(type, new LinkedHashSet<>());
+        }
+
+        for (ProjectionInputAsset asset : inputAssets) {
+            if (asset == null || asset.entry() == null) {
+                continue;
+            }
+
+            if (!"minecraft".equals(asset.entry().namespace())) {
+                continue;
+            }
+
+            minecraftAssets.get(asset.entry().type()).put(asset.entry().key(), asset);
+        }
+
+        LinkedHashSet<String> missingSeededTargets = new LinkedHashSet<>();
+        ArrayDeque<ProjectedDependency> queue = new ArrayDeque<>();
+        enqueueSeedTargets(request.structures(), ProjectedEntryType.STRUCTURE, minecraftAssets, missingSeededTargets, queue);
+        enqueueSeedTargets(request.structureSets(), ProjectedEntryType.STRUCTURE_SET, minecraftAssets, missingSeededTargets, queue);
+        enqueueSeedTargets(request.configuredFeatures(), ProjectedEntryType.CONFIGURED_FEATURE, minecraftAssets, missingSeededTargets, queue);
+        enqueueSeedTargets(request.placedFeatures(), ProjectedEntryType.PLACED_FEATURE, minecraftAssets, missingSeededTargets, queue);
+        enqueueSeedTargets(request.templatePools(), ProjectedEntryType.TEMPLATE_POOL, minecraftAssets, missingSeededTargets, queue);
+        enqueueSeedTargets(request.processorLists(), ProjectedEntryType.PROCESSOR_LIST, minecraftAssets, missingSeededTargets, queue);
+        enqueueSeedTargets(request.biomeHasStructureTags(), ProjectedEntryType.BIOME_HAS_STRUCTURE_TAG, minecraftAssets, missingSeededTargets, queue);
+
+        while (!queue.isEmpty()) {
+            ProjectedDependency current = queue.removeFirst();
+            if (current == null || current.key() == null || current.key().isBlank()) {
+                continue;
+            }
+
+            LinkedHashSet<String> visited = closure.get(current.type());
+            if (visited == null || !visited.add(current.key())) {
+                continue;
+            }
+
+            ProjectionInputAsset currentAsset = minecraftAssets.get(current.type()).get(current.key());
+            if (currentAsset == null) {
+                continue;
+            }
+
+            if (current.type() == ProjectedEntryType.STRUCTURE_NBT) {
+                continue;
+            }
+
+            if (!isJsonProjectedEntryType(current.type())) {
+                continue;
+            }
+
+            try {
+                JSONObject root = new JSONObject(new String(currentAsset.bytes(), StandardCharsets.UTF_8));
+                LinkedHashSet<ProjectedDependency> dependencies = new LinkedHashSet<>();
+                collectProjectedDependencies(root, current.type(), dependencies);
+                for (ProjectedDependency dependency : dependencies) {
+                    if (dependency == null || dependency.key() == null || dependency.key().isBlank()) {
+                        continue;
+                    }
+                    if (!dependency.key().startsWith("minecraft:")) {
+                        continue;
+                    }
+                    if (!minecraftAssets.get(dependency.type()).containsKey(dependency.key())) {
+                        continue;
+                    }
+                    queue.addLast(dependency);
+                }
+            } catch (Throwable ignored) {
+            }
+        }
+
+        ArrayList<ProjectionInputAsset> selected = new ArrayList<>();
+        for (ProjectionInputAsset asset : inputAssets) {
+            if (asset == null || asset.entry() == null) {
+                continue;
+            }
+
+            if (!"minecraft".equals(asset.entry().namespace())) {
+                selected.add(asset);
+                continue;
+            }
+
+            LinkedHashSet<String> selectedKeys = closure.get(asset.entry().type());
+            if (selectedKeys != null && selectedKeys.contains(asset.entry().key())) {
+                selected.add(asset);
+            }
+        }
+
+        return new ProjectionSelection(selected, Set.copyOf(missingSeededTargets));
+    }
+
+    private static void enqueueSeedTargets(
+            Set<String> keys,
+            ProjectedEntryType type,
+            Map<ProjectedEntryType, LinkedHashMap<String, ProjectionInputAsset>> minecraftAssets,
+            Set<String> missingSeededTargets,
+            ArrayDeque<ProjectedDependency> queue
+    ) {
+        if (keys == null || keys.isEmpty()) {
+            return;
+        }
+
+        LinkedHashMap<String, ProjectionInputAsset> typedAssets = minecraftAssets.get(type);
+        for (String key : keys) {
+            if (key == null || key.isBlank()) {
+                continue;
+            }
+
+            if (typedAssets == null || !typedAssets.containsKey(key)) {
+                missingSeededTargets.add(type.name().toLowerCase(Locale.ROOT) + ":" + key);
+                continue;
+            }
+
+            queue.addLast(new ProjectedDependency(type, key));
+        }
+    }
+
+    private static boolean isJsonProjectedEntryType(ProjectedEntryType type) {
+        return type == ProjectedEntryType.STRUCTURE
+                || type == ProjectedEntryType.STRUCTURE_SET
+                || type == ProjectedEntryType.CONFIGURED_FEATURE
+                || type == ProjectedEntryType.PLACED_FEATURE
+                || type == ProjectedEntryType.TEMPLATE_POOL
+                || type == ProjectedEntryType.PROCESSOR_LIST
+                || type == ProjectedEntryType.BIOME_HAS_STRUCTURE_TAG;
+    }
+
+    private static void collectProjectedDependencies(Object node, ProjectedEntryType ownerType, Set<ProjectedDependency> dependencies) {
+        if (node == null) {
+            return;
+        }
+
+        if (node instanceof JSONObject object) {
+            for (String key : object.keySet()) {
+                collectProjectedDependencies(object.get(key), ownerType, dependencies);
+            }
+            return;
+        }
+
+        if (node instanceof JSONArray array) {
+            for (int index = 0; index < array.length(); index++) {
+                collectProjectedDependencies(array.get(index), ownerType, dependencies);
+            }
+            return;
+        }
+
+        if (!(node instanceof String rawValue)) {
+            return;
+        }
+
+        String value = rawValue.trim();
+        if (value.isBlank()) {
+            return;
+        }
+
+        addDependency(ownerType, dependencies, value, ProjectedEntryType.STRUCTURE, "worldgen/structure/");
+        addDependency(ownerType, dependencies, value, ProjectedEntryType.STRUCTURE_SET, "worldgen/structure_set/");
+        addDependency(ownerType, dependencies, value, ProjectedEntryType.CONFIGURED_FEATURE, "worldgen/configured_feature/");
+        addDependency(ownerType, dependencies, value, ProjectedEntryType.PLACED_FEATURE, "worldgen/placed_feature/");
+        addDependency(ownerType, dependencies, value, ProjectedEntryType.TEMPLATE_POOL, "worldgen/template_pool/");
+        addDependency(ownerType, dependencies, value, ProjectedEntryType.PROCESSOR_LIST, "worldgen/processor_list/");
+        addDependency(ownerType, dependencies, value, ProjectedEntryType.BIOME_HAS_STRUCTURE_TAG,
+                "tags/worldgen/biome/has_structure/",
+                "worldgen/biome/has_structure/",
+                "has_structure/");
+        addDependency(ownerType, dependencies, value, ProjectedEntryType.STRUCTURE_NBT, "structure/", "structures/");
+    }
+
+    private static void addDependency(
+            ProjectedEntryType ownerType,
+            Set<ProjectedDependency> dependencies,
+            String value,
+            ProjectedEntryType dependencyType,
+            String... prefixes
+    ) {
+        String normalized = normalizeResourceKey("minecraft", value, prefixes);
+        if (normalized == null || normalized.isBlank()) {
+            return;
+        }
+
+        if (ownerType == dependencyType && ownerType != ProjectedEntryType.TEMPLATE_POOL) {
+            return;
+        }
+
+        dependencies.add(new ProjectedDependency(dependencyType, normalized));
+    }
+
+    private static String summarizeMissingSeededTargets(Set<String> missingSeededTargets) {
+        if (missingSeededTargets == null || missingSeededTargets.isEmpty()) {
+            return "";
+        }
+
+        ArrayList<String> sorted = new ArrayList<>(missingSeededTargets);
+        sorted.sort(String::compareTo);
+        if (sorted.size() <= 8) {
+            return String.join(", ", sorted);
+        }
+
+        ArrayList<String> limited = new ArrayList<>(sorted.subList(0, 8));
+        return String.join(", ", limited) + " +" + (sorted.size() - limited.size()) + " more";
+    }
+
+    private static int writeProjectedAssets(File managedFolder, List<ProjectionOutputAsset> assets) throws IOException {
+        if (assets == null || assets.isEmpty()) {
+            return 0;
+        }
+
+        int copied = 0;
+        for (ProjectionOutputAsset asset : assets) {
+            if (asset == null || asset.relativePath() == null || asset.bytes() == null) {
+                continue;
+            }
+            File output = new File(managedFolder, asset.relativePath());
+            writeBytesToFile(asset.bytes(), output);
+            copied++;
         }
         return copied;
     }
 
-    private static void copyProjectedFileEntry(File sourceFile, File output, DatapackRequest request, ProjectedEntry projectedEntry) throws IOException {
-        Integer startHeightAbsolute = getPatchedStartHeightAbsolute(projectedEntry, request);
-        if (startHeightAbsolute == null) {
-            copyFile(sourceFile, output);
-            return;
+    private static void writeBytesToFile(byte[] data, File output) throws IOException {
+        File parent = output.getParentFile();
+        if (parent != null) {
+            parent.mkdirs();
         }
 
-        String content = Files.readString(sourceFile.toPath(), StandardCharsets.UTF_8);
-        String patched = applyStructureStartHeightPatch(content, startHeightAbsolute);
-        Files.writeString(output.toPath(), patched, StandardCharsets.UTF_8);
-    }
-
-    private static void copyProjectedStreamEntry(InputStream inputStream, File output, DatapackRequest request, ProjectedEntry projectedEntry) throws IOException {
-        Integer startHeightAbsolute = getPatchedStartHeightAbsolute(projectedEntry, request);
-        if (startHeightAbsolute == null) {
-            writeInputStreamToFile(inputStream, output);
-            return;
+        File temp = parent == null
+                ? new File(output.getPath() + ".tmp-" + System.nanoTime())
+                : new File(parent, output.getName() + ".tmp-" + System.nanoTime());
+        Files.write(temp.toPath(), data);
+        try {
+            Files.move(temp.toPath(), output.toPath(), StandardCopyOption.REPLACE_EXISTING, StandardCopyOption.ATOMIC_MOVE);
+        } catch (IOException e) {
+            Files.move(temp.toPath(), output.toPath(), StandardCopyOption.REPLACE_EXISTING);
         }
-
-        byte[] bytes = inputStream.readAllBytes();
-        String content = new String(bytes, StandardCharsets.UTF_8);
-        String patched = applyStructureStartHeightPatch(content, startHeightAbsolute);
-        Files.writeString(output.toPath(), patched, StandardCharsets.UTF_8);
     }
 
     private static Integer getPatchedStartHeightAbsolute(ProjectedEntry projectedEntry, DatapackRequest request) {
@@ -671,12 +1304,261 @@ public final class ExternalDataPackPipeline {
         return request.structureStartHeights().get(projectedEntry.key());
     }
 
-    private static String applyStructureStartHeightPatch(String content, int startHeightAbsolute) {
-        JSONObject root = new JSONObject(content);
-        JSONObject startHeight = new JSONObject();
-        startHeight.put("absolute", startHeightAbsolute);
-        root.put("start_height", startHeight);
-        return root.toString(4);
+    private static void rewriteJsonValues(Object root, Map<String, String> replacements) {
+        if (root instanceof JSONObject object) {
+            for (String key : object.keySet()) {
+                Object value = object.get(key);
+                Object rewritten = rewriteJsonValue(value, replacements);
+                if (rewritten != value) {
+                    object.put(key, rewritten);
+                }
+            }
+            return;
+        }
+        if (root instanceof JSONArray array) {
+            for (int i = 0; i < array.length(); i++) {
+                Object value = array.get(i);
+                Object rewritten = rewriteJsonValue(value, replacements);
+                if (rewritten != value) {
+                    array.put(i, rewritten);
+                }
+            }
+        }
+    }
+
+    private static Object rewriteJsonValue(Object value, Map<String, String> replacements) {
+        if (value instanceof JSONObject object) {
+            rewriteJsonValues(object, replacements);
+            return object;
+        }
+        if (value instanceof JSONArray array) {
+            rewriteJsonValues(array, replacements);
+            return array;
+        }
+        if (value instanceof String stringValue) {
+            String replacement = replacements.get(stringValue);
+            if (replacement != null) {
+                return replacement;
+            }
+        }
+        return value;
+    }
+
+    private static Set<String> readStructureSetReferences(JSONObject root) {
+        LinkedHashSet<String> references = new LinkedHashSet<>();
+        if (root == null) {
+            return references;
+        }
+
+        JSONArray structures = root.optJSONArray("structures");
+        if (structures == null) {
+            return references;
+        }
+
+        for (int i = 0; i < structures.length(); i++) {
+            JSONObject structure = structures.optJSONObject(i);
+            if (structure == null) {
+                continue;
+            }
+            String structureKey = structure.optString("structure", "");
+            if (structureKey.isBlank()) {
+                continue;
+            }
+            String normalizedStructure = normalizeResourceKey("minecraft", structureKey, "worldgen/structure/");
+            if (normalizedStructure == null || normalizedStructure.isBlank()) {
+                continue;
+            }
+            references.add(normalizedStructure);
+        }
+        return references;
+    }
+
+    private static SyntheticStructureSetResult synthesizeMissingStructureSets(
+            Set<String> remappedStructureKeys,
+            Set<String> structureSetReferences,
+            Map<String, String> remappedKeys,
+            String scopeNamespace,
+            Set<String> writtenPaths
+    ) {
+        if (remappedStructureKeys == null || remappedStructureKeys.isEmpty()) {
+            return SyntheticStructureSetResult.empty();
+        }
+
+        LinkedHashMap<String, String> reverseRemap = new LinkedHashMap<>();
+        for (Map.Entry<String, String> entry : remappedKeys.entrySet()) {
+            reverseRemap.put(entry.getValue(), entry.getKey());
+        }
+
+        KMap<Identifier, StructurePlacement> vanillaPlacements = VANILLA_STRUCTURE_PLACEMENTS.aquire(() -> INMS.get().collectStructures());
+        if (vanillaPlacements == null || vanillaPlacements.isEmpty()) {
+            return SyntheticStructureSetResult.empty();
+        }
+
+        ArrayList<ProjectionOutputAsset> assets = new ArrayList<>();
+        int synthesized = 0;
+        for (String remappedStructure : remappedStructureKeys) {
+            if (structureSetReferences.contains(remappedStructure)) {
+                continue;
+            }
+
+            String originalStructure = reverseRemap.get(remappedStructure);
+            if (originalStructure == null || originalStructure.isBlank()) {
+                continue;
+            }
+
+            SyntheticPlacement syntheticPlacement = findSyntheticPlacement(vanillaPlacements, originalStructure);
+            if (syntheticPlacement == null) {
+                Iris.warn("Unable to synthesize structure set for remapped structure " + remappedStructure + " (no vanilla placement found).");
+                continue;
+            }
+
+            JSONObject structureSetRoot = buildSyntheticStructureSetJson(syntheticPlacement, remappedStructure);
+            if (structureSetRoot == null) {
+                Iris.warn("Unable to synthesize structure set for remapped structure " + remappedStructure + " (unsupported placement type).");
+                continue;
+            }
+
+            String structurePath = sanitizePath(extractPathFromKey(remappedStructure));
+            if (structurePath.isBlank()) {
+                structurePath = "structure";
+            }
+            String syntheticSetKey = scopeNamespace + ":generated/" + structurePath.replace('/', '_');
+            String syntheticPath = buildProjectedPath(new ProjectedEntry(ProjectedEntryType.STRUCTURE_SET, scopeNamespace, syntheticSetKey));
+            if (syntheticPath == null) {
+                continue;
+            }
+            if (writtenPaths.contains(syntheticPath)) {
+                syntheticSetKey = syntheticSetKey + "-" + shortHash(remappedStructure + "|" + syntheticPlacement.structureSetKey());
+                syntheticPath = buildProjectedPath(new ProjectedEntry(ProjectedEntryType.STRUCTURE_SET, scopeNamespace, syntheticSetKey));
+            }
+            if (syntheticPath == null || writtenPaths.contains(syntheticPath)) {
+                continue;
+            }
+
+            writtenPaths.add(syntheticPath);
+            structureSetReferences.add(remappedStructure);
+            assets.add(new ProjectionOutputAsset(syntheticPath, structureSetRoot.toString(4).getBytes(StandardCharsets.UTF_8)));
+            synthesized++;
+        }
+
+        return new SyntheticStructureSetResult(assets, synthesized);
+    }
+
+    private static SyntheticPlacement findSyntheticPlacement(KMap<Identifier, StructurePlacement> vanillaPlacements, String structureKey) {
+        if (vanillaPlacements == null || vanillaPlacements.isEmpty() || structureKey == null || structureKey.isBlank()) {
+            return null;
+        }
+
+        for (Map.Entry<Identifier, StructurePlacement> entry : vanillaPlacements.entrySet()) {
+            StructurePlacement placement = entry.getValue();
+            if (placement == null || placement.structures() == null || placement.structures().isEmpty()) {
+                continue;
+            }
+
+            for (StructurePlacement.Structure structure : placement.structures()) {
+                if (structure == null || structure.key() == null || structure.key().isBlank()) {
+                    continue;
+                }
+                if (!structureKey.equalsIgnoreCase(structure.key())) {
+                    continue;
+                }
+                int weight = structure.weight() > 0 ? structure.weight() : 1;
+                return new SyntheticPlacement(entry.getKey(), placement, weight);
+            }
+        }
+
+        return null;
+    }
+
+    private static JSONObject buildSyntheticStructureSetJson(SyntheticPlacement placement, String structureKey) {
+        if (placement == null || placement.placement() == null || structureKey == null || structureKey.isBlank()) {
+            return null;
+        }
+
+        JSONObject root = new JSONObject();
+        JSONArray structures = new JSONArray();
+        JSONObject structure = new JSONObject();
+        structure.put("structure", structureKey);
+        structure.put("weight", placement.weight());
+        structures.put(structure);
+        root.put("structures", structures);
+
+        StructurePlacement structurePlacement = placement.placement();
+        JSONObject placementJson = new JSONObject();
+        placementJson.put("salt", structurePlacement.salt());
+        if (structurePlacement instanceof StructurePlacement.RandomSpread randomSpread) {
+            placementJson.put("type", "minecraft:random_spread");
+            placementJson.put("spacing", randomSpread.spacing());
+            placementJson.put("separation", randomSpread.separation());
+            if (randomSpread.spreadType() != null) {
+                placementJson.put("spread_type", randomSpread.spreadType().name().toLowerCase(Locale.ROOT));
+            }
+            float frequency = structurePlacement.frequency();
+            if (frequency > 0F && frequency < 0.999999F) {
+                placementJson.put("frequency", frequency);
+                placementJson.put("frequency_reduction_method", "default");
+            }
+        } else if (structurePlacement instanceof StructurePlacement.ConcentricRings concentricRings) {
+            placementJson.put("type", "minecraft:concentric_rings");
+            placementJson.put("distance", concentricRings.distance());
+            placementJson.put("spread", concentricRings.spread());
+            placementJson.put("count", concentricRings.count());
+        } else {
+            return null;
+        }
+
+        root.put("placement", placementJson);
+        return root;
+    }
+
+    private static String buildScopeNamespace(SourceDescriptor sourceDescriptor, DatapackRequest request) {
+        String base = shortHash(sourceDescriptor.sourceKey() + "|" + request.id() + "|" + request.scopeKey());
+        return "iris_external_" + base;
+    }
+
+    private static String buildProjectedPath(ProjectedEntry entry) {
+        if (entry == null || entry.key() == null || entry.key().isBlank()) {
+            return null;
+        }
+
+        String namespace = extractNamespaceFromKey(entry.key());
+        String path = extractPathFromKey(entry.key());
+        if (namespace.isBlank() || path.isBlank()) {
+            return null;
+        }
+
+        return switch (entry.type()) {
+            case STRUCTURE -> "data/" + namespace + "/worldgen/structure/" + path + ".json";
+            case STRUCTURE_SET -> "data/" + namespace + "/worldgen/structure_set/" + path + ".json";
+            case CONFIGURED_FEATURE -> "data/" + namespace + "/worldgen/configured_feature/" + path + ".json";
+            case PLACED_FEATURE -> "data/" + namespace + "/worldgen/placed_feature/" + path + ".json";
+            case TEMPLATE_POOL -> "data/" + namespace + "/worldgen/template_pool/" + path + ".json";
+            case PROCESSOR_LIST -> "data/" + namespace + "/worldgen/processor_list/" + path + ".json";
+            case BIOME_HAS_STRUCTURE_TAG -> "data/" + namespace + "/tags/worldgen/biome/has_structure/" + path + ".json";
+            case STRUCTURE_NBT -> "data/" + namespace + "/structures/" + path + ".nbt";
+        };
+    }
+
+    private static String extractNamespaceFromKey(String key) {
+        if (key == null || key.isBlank()) {
+            return "";
+        }
+        int colon = key.indexOf(':');
+        if (colon <= 0) {
+            return "";
+        }
+        return sanitizePath(key.substring(0, colon));
+    }
+
+    private static String extractPathFromKey(String key) {
+        if (key == null || key.isBlank()) {
+            return "";
+        }
+        int colon = key.indexOf(':');
+        if (colon < 0 || colon + 1 >= key.length()) {
+            return sanitizePath(key);
+        }
+        return sanitizePath(key.substring(colon + 1));
     }
 
     private static void writeInputStreamToFile(InputStream inputStream, File output) throws IOException {
@@ -713,6 +1595,10 @@ public final class ExternalDataPackPipeline {
         }
 
         if (!"minecraft".equals(entry.namespace())) {
+            return true;
+        }
+
+        if (request.alongsideMode()) {
             return true;
         }
 
@@ -865,6 +1751,22 @@ public final class ExternalDataPackPipeline {
         }
 
         return keyNamespace + ":" + path;
+    }
+
+    private static String normalizeBiomeKey(String value) {
+        if (value == null || value.isBlank()) {
+            return null;
+        }
+
+        String cleaned = value.trim().replace('\\', '/');
+        if (cleaned.startsWith("#")) {
+            cleaned = cleaned.substring(1);
+        }
+        if (cleaned.isBlank()) {
+            return null;
+        }
+
+        return normalizeResourceKey("minecraft", cleaned, "worldgen/biome/");
     }
 
     private static void collectWorldDatapackFolders(Set<File> folders) {
@@ -1903,7 +2805,11 @@ public final class ExternalDataPackPipeline {
             Set<String> templatePools,
             Set<String> processorLists,
             Set<String> biomeHasStructureTags,
-            Map<String, Integer> structureStartHeights
+            Map<String, Integer> structureStartHeights,
+            Set<String> forcedBiomeKeys,
+            String scopeKey,
+            boolean alongsideMode,
+            Set<String> resolvedLocateStructures
     ) {
         public DatapackRequest(
                 String id,
@@ -1914,6 +2820,36 @@ public final class ExternalDataPackPipeline {
                 boolean replaceVanilla,
                 IrisExternalDatapackReplaceTargets replaceTargets,
                 KList<IrisExternalDatapackStructurePatch> structurePatches
+        ) {
+            this(
+                    id,
+                    url,
+                    targetPack,
+                    requiredEnvironment,
+                    required,
+                    replaceVanilla,
+                    replaceTargets,
+                    structurePatches,
+                    Set.of(),
+                    "dimension-root",
+                    !replaceVanilla,
+                    Set.of()
+            );
+        }
+
+        public DatapackRequest(
+                String id,
+                String url,
+                String targetPack,
+                String requiredEnvironment,
+                boolean required,
+                boolean replaceVanilla,
+                IrisExternalDatapackReplaceTargets replaceTargets,
+                KList<IrisExternalDatapackStructurePatch> structurePatches,
+                Set<String> forcedBiomeKeys,
+                String scopeKey,
+                boolean alongsideMode,
+                Set<String> resolvedLocateStructures
         ) {
             this(
                     normalizeRequestId(id, url),
@@ -1932,7 +2868,11 @@ public final class ExternalDataPackPipeline {
                             "tags/worldgen/biome/has_structure/",
                             "worldgen/biome/has_structure/",
                             "has_structure/"),
-                    normalizeStructureStartHeights(structurePatches)
+                    normalizeStructureStartHeights(structurePatches),
+                    normalizeBiomeKeys(forcedBiomeKeys),
+                    normalizeScopeKey(scopeKey),
+                    alongsideMode,
+                    normalizeLocateStructures(resolvedLocateStructures, replaceTargets == null ? null : replaceTargets.getStructures())
             );
         }
 
@@ -1949,10 +2889,14 @@ public final class ExternalDataPackPipeline {
             processorLists = immutableSet(processorLists);
             biomeHasStructureTags = immutableSet(biomeHasStructureTags);
             structureStartHeights = immutableMap(structureStartHeights);
+            forcedBiomeKeys = immutableBiomeSet(forcedBiomeKeys);
+            scopeKey = normalizeScopeKey(scopeKey);
+            alongsideMode = alongsideMode || !replaceVanilla;
+            resolvedLocateStructures = immutableLocateSet(resolvedLocateStructures, structures);
         }
 
         public String getDedupeKey() {
-            return targetPack + "|" + url;
+            return targetPack + "|" + url + "|" + scopeKey + "|" + replaceVanilla + "|" + required + "|" + setFingerprint(forcedBiomeKeys);
         }
 
         public boolean hasReplacementTargets() {
@@ -1987,7 +2931,11 @@ public final class ExternalDataPackPipeline {
                     union(templatePools, other.templatePools),
                     union(processorLists, other.processorLists),
                     union(biomeHasStructureTags, other.biomeHasStructureTags),
-                    unionStructureStartHeights(structureStartHeights, other.structureStartHeights)
+                    unionStructureStartHeights(structureStartHeights, other.structureStartHeights),
+                    union(forcedBiomeKeys, other.forcedBiomeKeys),
+                    normalizeScopeKey(scopeKey),
+                    alongsideMode || other.alongsideMode,
+                    union(resolvedLocateStructures, other.resolvedLocateStructures)
             );
         }
 
@@ -2005,6 +2953,45 @@ public final class ExternalDataPackPipeline {
                 return sanitized;
             }
             return defaultTargetPack();
+        }
+
+        private static Set<String> normalizeBiomeKeys(Set<String> values) {
+            LinkedHashSet<String> normalized = new LinkedHashSet<>();
+            if (values == null) {
+                return normalized;
+            }
+
+            for (String value : values) {
+                String normalizedBiome = normalizeBiomeKey(value);
+                if (normalizedBiome != null && !normalizedBiome.isBlank()) {
+                    normalized.add(normalizedBiome);
+                }
+            }
+
+            return normalized;
+        }
+
+        private static Set<String> normalizeLocateStructures(Set<String> values, KList<String> structureValues) {
+            LinkedHashSet<String> normalized = new LinkedHashSet<>();
+            if (values != null) {
+                for (String value : values) {
+                    String normalizedStructure = normalizeLocateStructure(value);
+                    if (!normalizedStructure.isBlank()) {
+                        normalized.add(normalizedStructure);
+                    }
+                }
+            }
+
+            if (structureValues != null) {
+                for (String structure : structureValues) {
+                    String normalizedStructure = normalizeLocateStructure(structure);
+                    if (!normalizedStructure.isBlank()) {
+                        normalized.add(normalizedStructure);
+                    }
+                }
+            }
+
+            return normalized;
         }
 
         private static Set<String> normalizeTargets(KList<String> values, String... prefixes) {
@@ -2025,6 +3012,40 @@ public final class ExternalDataPackPipeline {
             LinkedHashSet<String> copy = new LinkedHashSet<>();
             if (values != null) {
                 copy.addAll(values);
+            }
+            return Set.copyOf(copy);
+        }
+
+        private static Set<String> immutableBiomeSet(Set<String> values) {
+            LinkedHashSet<String> copy = new LinkedHashSet<>();
+            if (values != null) {
+                for (String value : values) {
+                    String normalized = normalizeBiomeKey(value);
+                    if (normalized != null && !normalized.isBlank()) {
+                        copy.add(normalized);
+                    }
+                }
+            }
+            return Set.copyOf(copy);
+        }
+
+        private static Set<String> immutableLocateSet(Set<String> values, Set<String> structureTargets) {
+            LinkedHashSet<String> copy = new LinkedHashSet<>();
+            if (values != null) {
+                for (String value : values) {
+                    String normalized = normalizeLocateStructure(value);
+                    if (!normalized.isBlank()) {
+                        copy.add(normalized);
+                    }
+                }
+            }
+            if (structureTargets != null) {
+                for (String structureTarget : structureTargets) {
+                    String normalized = normalizeLocateStructure(structureTarget);
+                    if (!normalized.isBlank()) {
+                        copy.add(normalized);
+                    }
+                }
             }
             return Set.copyOf(copy);
         }
@@ -2084,6 +3105,23 @@ public final class ExternalDataPackPipeline {
                 merged.putAll(second);
             }
             return merged;
+        }
+
+        private static String normalizeScopeKey(String value) {
+            String normalized = sanitizePath(value).replace("/", "_");
+            if (normalized.isBlank()) {
+                return "dimension-root";
+            }
+            return normalized;
+        }
+
+        private static String setFingerprint(Set<String> values) {
+            if (values == null || values.isEmpty()) {
+                return "none";
+            }
+            ArrayList<String> sorted = new ArrayList<>(values);
+            sorted.sort(String::compareTo);
+            return shortHash(String.join(",", sorted));
         }
     }
 
@@ -2223,13 +3261,102 @@ public final class ExternalDataPackPipeline {
         BIOME_HAS_STRUCTURE_TAG
     }
 
-    private record ProjectionResult(boolean success, int installedDatapacks, int installedAssets, String managedName) {
-        private static ProjectionResult success(String managedName, int installedDatapacks, int installedAssets) {
-            return new ProjectionResult(true, installedDatapacks, installedAssets, managedName);
+    private record ProjectedDependency(ProjectedEntryType type, String key) {
+    }
+
+    private record ProjectionSelection(List<ProjectionInputAsset> assets, Set<String> missingSeededTargets) {
+        private ProjectionSelection {
+            assets = assets == null ? List.of() : List.copyOf(assets);
+            missingSeededTargets = missingSeededTargets == null ? Set.of() : Set.copyOf(missingSeededTargets);
         }
 
-        private static ProjectionResult failure(String managedName) {
-            return new ProjectionResult(false, 0, 0, managedName);
+        private static ProjectionSelection empty() {
+            return new ProjectionSelection(List.of(), Set.of());
+        }
+    }
+
+    private record ProjectionResult(
+            boolean success,
+            int installedDatapacks,
+            int installedAssets,
+            Set<String> resolvedLocateStructures,
+            int syntheticStructureSets,
+            String managedName,
+            String error
+    ) {
+        private ProjectionResult {
+            LinkedHashSet<String> normalized = new LinkedHashSet<>();
+            if (resolvedLocateStructures != null) {
+                for (String structure : resolvedLocateStructures) {
+                    String normalizedStructure = normalizeLocateStructure(structure);
+                    if (!normalizedStructure.isBlank()) {
+                        normalized.add(normalizedStructure);
+                    }
+                }
+            }
+            resolvedLocateStructures = Set.copyOf(normalized);
+            syntheticStructureSets = Math.max(0, syntheticStructureSets);
+            if (error == null) {
+                error = "";
+            }
+        }
+
+        private static ProjectionResult success(
+                String managedName,
+                int installedDatapacks,
+                int installedAssets,
+                Set<String> resolvedLocateStructures,
+                int syntheticStructureSets
+        ) {
+            return new ProjectionResult(true, installedDatapacks, installedAssets, resolvedLocateStructures, syntheticStructureSets, managedName, "");
+        }
+
+        private static ProjectionResult failure(String managedName, String error) {
+            String message = error == null || error.isBlank() ? "projection failed" : error;
+            return new ProjectionResult(false, 0, 0, Set.of(), 0, managedName, message);
+        }
+    }
+
+    private record ProjectionInputAsset(String relativePath, ProjectedEntry entry, byte[] bytes) {
+        private ProjectionInputAsset {
+            bytes = bytes == null ? new byte[0] : Arrays.copyOf(bytes, bytes.length);
+        }
+    }
+
+    private record ProjectionOutputAsset(String relativePath, byte[] bytes) {
+        private ProjectionOutputAsset {
+            bytes = bytes == null ? new byte[0] : Arrays.copyOf(bytes, bytes.length);
+        }
+    }
+
+    private record ProjectionAssetSummary(List<ProjectionOutputAsset> assets, Set<String> resolvedLocateStructures, int syntheticStructureSets) {
+        private ProjectionAssetSummary {
+            assets = assets == null ? List.of() : List.copyOf(assets);
+            LinkedHashSet<String> normalized = new LinkedHashSet<>();
+            if (resolvedLocateStructures != null) {
+                for (String structure : resolvedLocateStructures) {
+                    String normalizedStructure = normalizeLocateStructure(structure);
+                    if (!normalizedStructure.isBlank()) {
+                        normalized.add(normalizedStructure);
+                    }
+                }
+            }
+            resolvedLocateStructures = Set.copyOf(normalized);
+            syntheticStructureSets = Math.max(0, syntheticStructureSets);
+        }
+    }
+
+    private record SyntheticPlacement(Identifier structureSetKey, StructurePlacement placement, int weight) {
+    }
+
+    private record SyntheticStructureSetResult(List<ProjectionOutputAsset> assets, int count) {
+        private SyntheticStructureSetResult {
+            assets = assets == null ? List.of() : List.copyOf(assets);
+            count = Math.max(0, count);
+        }
+
+        private static SyntheticStructureSetResult empty() {
+            return new SyntheticStructureSetResult(List.of(), 0);
         }
     }
 
